Demo Site | Fixes z-index issue with feature cards copy and card image.

--- a/stylesheets/_features.scss
+++ b/stylesheets/_features.scss
@@ -22,6 +22,10 @@
 .feature-copy {
   margin-top: 0;
   margin-bottom: 0;
+
+  @include desktop__1024 {
+    z-index: 10;
+  }
 }
 
 .feature-cards-container {
